[tool.poetry]
name = "bet-maker"
version = "0.1.0"
description = ""
authors = ["Mobi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
redis = "^5.2.0"
httpx = "^0.27.2"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.3"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
select = ["ALL"]
ignore = ["D1", "D203", "D213", "FA102", "ANN101", "UP007", "TCH001", "BLE001", "DTZ005", "TRY300", "DTZ007"]

[tool.ruff.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = ["whole_app"]

[tool.ruff.extend-per-file-ignores]
"./*.py" = ["ANN401", "S101", "S311", "F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v -rf --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests"
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.coverage.html]
directory = "coverage_html"